# RTS

./: .dockerignore  .gitignore  .trunk.toml  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  nginx.conf
.cargo/: config.toml
assets/AnimatedKnightPack/: How to add weapons.docx  License.docx
assets/ToonyTinyPeople/: ASSET_GUIDE.md
assets/ToonyTinyPeople/models/buildings/: Archery.glb  Barracks.glb  BeastLair.glb  Blacksmith.glb  Castle.glb  Farm.glb  Granary.glb  House.glb  Keep.glb  Library.glb  LumberMill.glb  MageTower.glb  Market.glb  Stables.glb  Temple.glb  Tower_A.glb  Tower_B.glb  Tower_C.glb  TownHall.glb  Wall_A_1x1.glb  Wall_A_corner.glb  Wall_A_gate.glb  Wall_A_wall.glb  Wall_B_1x1.glb  Wall_B_corner.glb  Wall_B_gate.glb  Wall_B_wall.glb  Workshop.glb  wall_A_gate_animated.glb  wall_B_gate_animated.glb
assets/ToonyTinyPeople/models/buildings/construction/: Archery_0.glb  Archery_1.glb  Barracks_0.glb  Barracks_1.glb  Blacksmith_0.glb  Blacksmith_1.glb  Castle_0.glb  Castle_1.glb  Farm_0.glb  Farm_1.glb  Granary_0.glb  Granary_1.glb  House_0.glb  House_1.glb  Keep_0.glb  Keep_1.glb  Library_0.glb  Library_1.glb  LumberMill_0.glb  LumberMill_1.glb  MageTower_0.glb  MageTower_1.glb  Market_0.glb  Market_1.glb  Stables_0.glb  Stables_1.glb  Temple_0.glb  Temple_1.glb  Tower_A_0.glb  Tower_A_1.glb  Tower_B_0.glb  Tower_B_1.glb  Tower_C_0.glb  Tower_C_1.glb  TownHall_0.glb  TownHall_1.glb  Wall_A_1x1_0.glb  Wall_A_1x1_1.glb  Wall_A_corner_0.glb  Wall_A_corner_1.glb  (+14 more)
assets/ToonyTinyPeople/models/fx/: FX_collision_plane.glb  FX_stone_A.glb  FX_stone_B.glb  FX_wood_A.glb  FX_wood_B.glb  FX_wood_C.glb  FX_wreck_A.glb  FX_wreck_B.glb  FX_wreck_C.glb  FX_wreck_D.glb
assets/ToonyTinyPeople/models/units/: TT_Archer.glb  TT_Commander.glb  TT_Crossbowman.glb  TT_Halberdier.glb  TT_HeavySwordman.glb  TT_Heavy_Cavalry.glb  TT_Heavy_Infantry.glb  TT_HighPriest.glb  TT_King.glb  TT_Light_Cavalry.glb  TT_Light_Infantry.glb  TT_Mage.glb  TT_Mounted_King.glb  TT_Mounted_Knight.glb  TT_Mounted_Mage.glb  TT_Mounted_Paladin.glb  TT_Mounted_Priest.glb  TT_Mounted_Scout.glb  TT_Paladin.glb  TT_Peasant.glb  TT_Priest.glb  TT_Scout.glb  TT_Settler.glb  TT_Spearman.glb  TT_Swordman.glb
assets/icons/: CREDITS.txt
assets/shaders/: fog_of_war.wgsl  hover_ring.wgsl
config/: debug_tweaks.json  graphics_settings.json
docs/: gameplay.md  multiplayer-architecture.md
game_state/: Cargo.toml
game_state/src/: codec.rs  lib.rs  message.rs  types.rs
scripts/: build-windows.sh
src/: abilities.rs  ages.rs  ai.rs  animation.rs  attention.rs  blueprints.rs  buildings.rs  camera.rs  combat.rs  components.rs  culling.rs  debug.rs  fog.rs  fog_material.rs  ground.rs  hover_material.rs  lib.rs  lighting.rs  main.rs  menu.rs  minimap.rs  mobs.rs  model_assets.rs  net_bridge.rs  orders.rs  pathfinding.rs  pathvis.rs  pause_menu.rs  resources.rs  roads.rs  save.rs  selection.rs  session_router.rs  spatial.rs  theme.rs  ui.rs  unit_ai.rs  units.rs  vfx.rs  victory.rs
src/ai/: economy.rs  helpers.rs  military.rs  mod.rs  strategy.rs  tactical.rs  types.rs
src/menu/: mod.rs  multiplayer.rs  pages.rs  systems.rs
src/menu/multiplayer/: config.rs  lobby.rs  mod.rs  networking.rs  pages.rs
src/multiplayer/: client_systems.rs  debug_tap.rs  ggrs_matchbox.rs  host_systems.rs  matchbox_transport.rs  mod.rs  transport.rs
src/multiplayer/client/: apply.rs  interpolation.rs  mod.rs  receive.rs
src/multiplayer/server/: input.rs  mod.rs  replication.rs
src/multiplayer/transport/: discovery.rs  ip.rs  mod.rs  tcp.rs  wire.rs
src/ui/: actions_widget.rs  animations.rs  army_overview_widget.rs  buttons.rs  event_log_widget.rs  fonts.rs  group_hotkeys_widget.rs  hints_widget.rs  menu_helpers.rs  mod.rs  notifications.rs  production_queue_widget.rs  resources_widget.rs  selection_widget.rs  shared.rs  tech_tree_widget.rs  widget_framework.rs  widget_toolbar.rs
tools/: gather_rs.sh  llm.txt
tools/config/: debug_tweaks.json
(+165 files in other folders)
