[package]
name = "rts"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["webgpu", "webgl2"] }
bevy_mod_outline = "0.12"
noise = "0.9"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
game_state = { path = "game_state" }

# Enable optimizations for dependencies in dev builds for acceptable framerate
[profile.dev.package."*"]
opt-level = 2

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
