[package]
name = "rts"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = [
    "dep:bevy",
    "dep:bevy_ggrs",
    "dep:bevy_matchbox",
    "dep:bevy_mod_outline",
    "dep:getrandom",
    "dep:noise",
    "dep:rand",
]

[[bin]]
name = "rts"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "session_router"
path = "src/bin/session_router.rs"

[dependencies]
bevy = { version = "0.18", features = ["webgpu", "webgl2"], optional = true }
bevy_mod_outline = { version = "0.12", optional = true }
bevy_ggrs = { version = "0.20", optional = true }
bevy_matchbox = { version = "0.14", features = ["ggrs"], optional = true }
noise = { version = "0.9", optional = true }
rand = { version = "0.9", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
game_state = { path = "game_state" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
socket2 = "0.5"
if-addrs = "0.13"
tungstenite = "0.26"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.91", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType", "Document", "HtmlDocument", "DataTransfer", "ClipboardEvent", "Clipboard", "Navigator", "Window", "Location"] }
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.41"

# Enable optimizations for dependencies in dev builds for acceptable framerate
[profile.dev.package."*"]
opt-level = 2

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
